# DetectorInference

./: .gitignore  CMakeLists.txt  README.md  click_me_to_install.bat  click_me_to_run.bat  conanfile.py  infer.py  requirements.txt
cpp/: CMakeLists.txt  Inferencer.cpp  Inferencer.h  config.h  data_structure.h  inferencer.cpp  inferencer.h  main.cpp  plugin.cpp  plugin.h  utils.cpp  utils.h
demo/: main.cpp
demo/utils/include/: utils.h
demo/utils/src/: utils.cpp
detector_inference/: CMakeLists.txt
detector_inference/src/: detector_inference.cpp  detector_inferencer.cpp
docs/: inference.md  problems.md
include/: utils.h
res/: data.txt  data_pt.txt
src/: main.cpp
utils/: utils.py
